Fixed overflow & double scroll issue

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -224,7 +224,7 @@ a:hover {
   }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px) { 
+@media screen and (min-width: 992px) and (max-width: 2500px) { 
   .about-description {
     text-align: center;
   }
